﻿# Changelog
Comprehensive changes can be found in Git change history:
	https://github.com/mkahvi/taskmaster/commits/master

## [0.13...]
### 2019-03-25
	Fixed: IPC does not work.
### 2019-03-19
	Fixed: System32 ignore warning was flipped.
	Changed: Default path visibility changed from invalid to process.
	Fixed: Array handling that was breaking new installations.
	Fixed: Main window lists GPU even if related component is disabled.
	Fixed: Empty arrays break things.
### 2019-03-18
	Internal: Restructuring. Should not affecting end-users.
### 2019-03-16
	Internal: Some small changes. Minor end-user effects that should not be very noticeable.
### 2019-03-15
	Changed: Maximum powerdown delay changed from 1 minute to 5 minutes.
	Changed: NVM warnings should be now more sane and uniform in presentation
	Changed: Watchlist item rename now actually renames it instead of recreating it. This removes a hack used for SharpConfig.
### 2019-03-14
	Internal: Various small config access improvements to minimize errors.
### 2019-03-13
	Replaced: SharpConfig with custom .ini handler.
### 2019-03-10
	Removed: --bootdelay argument. If delay is desired, task scheduler can be used for it.
	Fixed: Some message dialogs were positioned oddly at top-left corner of the screen.
	Changed: Some heavy initialization is deferred until later to allow normal initialization to finish sooner.
### 2019-03-09
	Changed: Free memory action is now more informative on what it does and what will happen.
	Fixed: User idletime calculation now works correctly, especially at the Windows API stated failpoint of 49 days.
	Added: Health monitor warns about the 49 day wraparound occurring.
### 2019-03-08
	Changed: Watchlist edit now tries to autofill executable name when available.
	Fixed: Watchlist executable validation now complains if the file has no extension.
	Added: Health monitor pressure warning now also informs of the pressure having been successfully alleviated.